--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "devDependencies": {
     "lerna": "^3.15.0",
-    "lerna-changelog": "^0.8.2"
+    "lerna-changelog": "^0.8.2",
+    "ts-loader": "^6.0.3"
   },
   "scripts": {
     "lerna": "lerna",
