chore: remove ts-loader in root package.json

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "devDependencies": {
     "lerna": "^3.15.0",
-    "lerna-changelog": "^0.8.2",
-    "ts-loader": "^6.0.3"
+    "lerna-changelog": "^0.8.2"
   },
   "scripts": {
     "lerna": "lerna",
