WIP(yab-fetch): Init utils

--- a/packages/yab-fetch/tsconfig.json
+++ b/packages/yab-fetch/tsconfig.json
@@ -3,6 +3,6 @@
     "module": "es6",
     "target": "esnext",
     "strict": true,
-    "lib": ["es2018", "esnext"]
+    "lib": ["es2018", "esnext", "dom"]
   }
 }
