feat(yab-fetch): Add createFetch

--- a/packages/yab-fetch/tsconfig.json
+++ b/packages/yab-fetch/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "module": "es6",
-    "target": "esnext",
+    "rootDir": "src",
     "strict": true,
     "lib": ["es2018", "esnext", "dom"]
   }
