--- a/packages/yab-fetch/package.json
+++ b/packages/yab-fetch/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/node": "^10.14.7",
+    "@types/qs": "^6.5.3",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "cache-loader": "^3.0.1",
