--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "@types/jest": "^24.0.15",
     "lerna": "^3.15.0",
-    "lerna-changelog": "^0.8.2",
-    "ts-jest": "^24.0.2"
+    "lerna-changelog": "^0.8.2"
   },
   "scripts": {
     "lerna": "lerna",
