--- a/packages/yab-fetch/package.json
+++ b/packages/yab-fetch/package.json
@@ -8,7 +8,8 @@
     "build:es": "tsc -p ./tsconfig.es.json",
     "build:lib": "tsc -p ./tsconfig.lib.json",
     "build:dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.dist.js",
-    "lint": "eslint src --ext ts"
+    "lint": "eslint src --ext ts",
+    "test": "jest"
   },
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.js",
@@ -26,6 +27,7 @@
     "access": "public"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.15",
     "@types/node": "^10.14.7",
     "@types/qs": "^6.5.3",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
@@ -42,14 +44,17 @@
     "fork-ts-checker-notifier-webpack-plugin": "^1.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "jest": "^24.8.0",
     "prettier": "^1.17.1",
     "rimraf": "^2.6.3",
     "terser-webpack-plugin": "^1.3.0",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.3",
     "typescript": "^3.5.2",
     "webpack": "^4.32.2",
     "webpack-cli": "^3.3.2",
-    "webpack-merge": "^4.2.1"
+    "webpack-merge": "^4.2.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "files": [
     "dist"
