--- a/packages/yab-fetch/package.json
+++ b/packages/yab-fetch/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.15",
+    "@types/lodash.omit": "^4.5.6",
     "@types/node": "^10.14.7",
     "@types/qs": "^6.5.3",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
@@ -60,6 +61,7 @@
     "dist"
   ],
   "dependencies": {
+    "lodash.omit": "^4.5.0",
     "qs": "^6.7.0"
   }
 }
