--- a/packages/yab-fetch/tsconfig.json
+++ b/packages/yab-fetch/tsconfig.json
@@ -6,5 +6,7 @@
     "lib": ["es2018", "esnext", "dom"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
 }
