--- a/packages/yab-fetch/tsconfig.json
+++ b/packages/yab-fetch/tsconfig.json
@@ -4,6 +4,7 @@
     "rootDir": "src",
     "strict": true,
     "lib": ["es2018", "esnext", "dom"],
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
