--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "update": "lerna updated",
     "publish": "lerna publish",
     "lint": "lerna run lint",
-    "build": "lerna run build:lib",
+    "build": "lerna run build",
     "test": "lerna run test"
   },
   "repository": {
