fix: /test eslint error (#24)
* fix: eslint error in test

* fix(typo): executable

* fix(typo): middleware

--- a/packages/yab-fetch/package.json
+++ b/packages/yab-fetch/package.json
@@ -8,7 +8,7 @@
     "build:es": "tsc -p ./tsconfig.es.json",
     "build:lib": "tsc -p ./tsconfig.lib.json",
     "build:dist": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.dist.js",
-    "lint": "eslint src --ext ts",
+    "lint": "eslint --ext .ts src/ test/",
     "test": "jest"
   },
   "main": "./dist/lib/index.js",
