--- a/packages/yab-fetch/package.json
+++ b/packages/yab-fetch/package.json
@@ -47,7 +47,9 @@
     "fork-ts-checker-notifier-webpack-plugin": "^1.0.2",
     "fork-ts-checker-webpack-plugin": "^1.4.3",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "husky": "^3.0.1",
     "jest": "^24.8.0",
+    "lint-staged": "^9.2.0",
     "prettier": "^1.18.2",
     "rimraf": "^2.6.3",
     "terser-webpack-plugin": "^1.3.0",
@@ -66,5 +68,17 @@
     "koa-compose": "^4.1.0",
     "lodash.omit": "^4.5.0",
     "qs": "^6.7.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js, ts}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
