--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
     { "language": "typescript", "autoFix": true },
     { "language": "typescriptreact", "autoFix": true }
   ],
-  "cSpell.words": []
+  "cSpell.words": [
+    "circleci",
+    "codecov",
+    "lerna"
+  ]
 }
