--- a/packages/yab-fetch/package.json
+++ b/packages/yab-fetch/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "scripts": {
     "clean": "rimraf dist",
+    "clean:test": "rimraf coverage",
     "build": "npm run clean && npm run build:es && npm run build:lib && npm run build:dist",
     "build:es": "tsc -p ./tsconfig.es.json",
     "build:lib": "tsc -p ./tsconfig.lib.json",
     "build:dist": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.dist.js",
     "lint": "eslint --ext .ts src/ test/",
-    "test": "jest"
+    "test": "npm run clean:test && jest"
   },
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.js",
