--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,7 @@
 {
+  "version": "0.0.0",
+  "npmClient": "yarn",
   "packages": [
     "packages/*"
-  ],
-  "npmClient": "yarn",
-  "version": "0.0.0"
+  ]
 }
