Add lerna changelog (#39)
* WIP(lerna): add lerna-changelog config

* feat: update readme

--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,10 @@
 {
   "version": "0.0.0",
   "npmClient": "yarn",
+  "changelog": {
+    "repo": "stonexer/yab",
+    "cacheDir": ".changelog"
+  },
   "packages": [
     "packages/*"
   ]
