--- a/packages/yab-fetch-middlewares/package.json
+++ b/packages/yab-fetch-middlewares/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yab-fetch-middlewares",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "",
   "homepage": "https://github.com/stonexer/yab/tree/master/packages/yab-fetch-middlewares#readme",
   "license": "ISC",
@@ -49,7 +49,7 @@
     "webpack-cli": "^3.3.2",
     "webpack-merge": "^4.2.1",
     "whatwg-fetch": "^3.0.0",
-    "yab-fetch": "^0.0.0"
+    "yab-fetch": "^0.0.1-alpha.0"
   },
   "files": [
     "dist"
