--- a/packages/yab-fetch-cache/package.json
+++ b/packages/yab-fetch-cache/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1-alpha.1",
   "description": "",
   "homepage": "https://github.com/mjolnirjs/yab/tree/master/packages/yab-fetch-cache#readme",
-  "license": "ISC",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mjolnirjs/yab.git"
