--- a/packages/yab-fetch-logger/package.json
+++ b/packages/yab-fetch-logger/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "yab-fetch-cache",
+  "name": "yab-fetch-logger",
   "version": "0.0.1-alpha.1",
   "description": "",
-  "homepage": "https://github.com/mjolnirjs/yab/tree/master/packages/yab-fetch-cache#readme",
+  "homepage": "https://github.com/mjolnirjs/yab/tree/master/packages/yab-fetch-logger#readme",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -14,15 +14,12 @@
     "build:es": "tsc -p ./tsconfig.es.json",
     "build:lib": "tsc -p ./tsconfig.lib.json",
     "build:dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.dist.js",
-    "lint": "eslint src --ext ts",
-    "test": "jest"
+    "lint": "eslint src --ext ts"
   },
   "main": "./dist/lib/index.js",
   "module": "./dist/es/index.js",
   "types": "./dist/types/index.d.ts",
   "devDependencies": {
-    "@types/jest": "^24.0.15",
-    "@types/node": "^10.14.7",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "cache-loader": "^3.0.1",
@@ -34,7 +31,6 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "fake-indexeddb": "^2.1.1",
     "fork-ts-checker-notifier-webpack-plugin": "^1.0.0",
     "fork-ts-checker-webpack-plugin": "^1.3.4",
     "friendly-errors-webpack-plugin": "^1.7.0",
