WIP: init yarn workspace with lerna

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "yab",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/mjolnirjs/yab"
