--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "homepage": "https://github.com/mjolnirjs/yab#readme",
   "scripts": {
-    "postinstall": "lerna clean --yes && lerna bootstrap",
     "clean": "lerna run clean --parallel",
     "changelog": "lerna-changelog",
     "build": "lerna exec -- npm run build",
@@ -24,7 +23,33 @@
     "release": "npm run test && npm run build && npm run publish"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-prettier": "^3.1.0",
+    "husky": "^3.0.1",
+    "prettier": "^1.17.1",
     "lerna": "^3.15.0",
-    "lerna-changelog": "^0.8.2"
+    "lerna-changelog": "^0.8.2",
+    "jest": "^24.8.0",
+    "lint-staged": "^9.2.0",
+    "rimraf": "^2.6.3",
+    "typescript": "^3.5.3"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.{js, ts}": [
+      "prettier --write",
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
