--- a/packages/yab-fetch/tsconfig.json
+++ b/packages/yab-fetch/tsconfig.json
@@ -1,14 +1,5 @@
 {
-  "compilerOptions": {
-    "rootDir": "src",
-    "module": "es6",
-    "target": "es5",
-    "lib": ["es2018", "esnext", "dom"],
-    "moduleResolution": "node",
-    "strict": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
-  },
+  "extends": "../../tsconfig.json",
   "include": [
     "./src"
   ]
