--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "http://json.schemastore.org/lerna",
   "version": "0.0.1-alpha.3",
   "useWorkspaces": true,
   "npmClient": "yarn",
