--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "release": "npm run test && npm run build && npm run publish"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.15",
+    "@types/node": "^10.14.7",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "eslint": "^5.16.0",
@@ -36,6 +38,7 @@
     "lerna": "^3.15.0",
     "lerna-changelog": "^0.8.2",
     "jest": "^24.8.0",
+    "ts-jest": "^24.0.2",
     "lint-staged": "^9.2.0",
     "rimraf": "^2.6.3",
     "typescript": "^3.5.3"
