--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,7 @@
   "compilerOptions": {
     "module": "es6",
     "target": "es5",
-    "lib": ["es2018", "esnext", "dom"],
-    "moduleResolution": "node",
-    "strict": true,
-    "allowSyntheticDefaultImports": true,
+    "lib": ["esnext", "dom"],
     "esModuleInterop": true
   }
 }
