--- a/packages/yab-fetch-logger/package.json
+++ b/packages/yab-fetch-logger/package.json
@@ -13,7 +13,7 @@
     "build": "npm run clean && npm run build:es && npm run build:lib && npm run build:dist",
     "build:es": "tsc -p ./tsconfig.es.json",
     "build:lib": "tsc -p ./tsconfig.lib.json",
-    "build:dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.dist.js",
+    "build:dist": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "lint": "eslint src --ext ts"
   },
   "main": "./dist/lib/index.js",
