--- a/packages/yab-fetch/package.json
+++ b/packages/yab-fetch/package.json
@@ -8,7 +8,7 @@
     "build": "npm run clean && npm run build:es && npm run build:lib && npm run build:dist",
     "build:es": "tsc -p ./tsconfig.es.json",
     "build:lib": "tsc -p ./tsconfig.lib.json",
-    "build:dist": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.dist.js",
+    "build:dist": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "lint": "eslint --ext .ts src/ test/",
     "test": "npm run clean:test && jest"
   },
