chore: use yarn workspace (#17)
* WIP: init yarn workspace with lerna

* WIP: clean yarn.lock

* WIP: reinstall

* feat: tidy

* feat: add $schema for lerna.json

* WIP: ignore packages/*/dist

* feat: add jest.config.js to every packages

* feat: delete unnecessary rule

* feat: modify includes path

* feat: add huskyrc and lintstaged rc file

* feat: remove husky, lintstaged config from pkg

* feat: hosting webpack config to root

* feat: hosting devDependences in root

* feat: del unuse ts compilerOptions

* feat: change rc file

* feat: rebuild

* chore: update yarn.lock

* chore: update test command

* feat: complete test coverage

--- a/packages/yab-fetch/tsconfig.json
+++ b/packages/yab-fetch/tsconfig.json
@@ -1,15 +1,4 @@
 {
-  "compilerOptions": {
-    "rootDir": "src",
-    "module": "es6",
-    "target": "es5",
-    "lib": ["es2018", "esnext", "dom"],
-    "moduleResolution": "node",
-    "strict": true,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
-  },
-  "include": [
-    "./src"
-  ]
+  "extends": "../../tsconfig.json",
+  "include": ["src"]
 }
