--- a/lerna.json
+++ b/lerna.json
@@ -1,11 +1,10 @@
 {
+  "$schema": "http://json.schemastore.org/lerna",
   "version": "0.0.1-alpha.3",
+  "useWorkspaces": true,
   "npmClient": "yarn",
   "changelog": {
     "repo": "mjolnirjs/yab",
     "cacheDir": ".changelog"
-  },
-  "packages": [
-    "packages/*"
-  ]
+  }
 }
