--- a/packages/yab-fetch-cache/package.json
+++ b/packages/yab-fetch-cache/package.json
@@ -13,7 +13,7 @@
     "build": "npm run clean && npm run build:es && npm run build:lib && npm run build:dist",
     "build:es": "tsc -p ./tsconfig.es.json",
     "build:lib": "tsc -p ./tsconfig.lib.json",
-    "build:dist": "cross-env NODE_ENV=production webpack --config ./config/webpack.config.dist.js",
+    "build:dist": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "lint": "eslint src --ext ts",
     "test": "jest --no--cache"
   },
@@ -21,33 +21,7 @@
   "module": "./dist/es/index.js",
   "types": "./dist/types/index.d.ts",
   "devDependencies": {
-    "@types/jest": "^24.0.15",
-    "@types/node": "^10.14.7",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
-    "cache-loader": "^3.0.1",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "cross-env": "^5.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-loader": "^2.1.2",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-prettier": "^3.1.0",
     "fake-indexeddb": "^2.1.1",
-    "fork-ts-checker-notifier-webpack-plugin": "^1.0.0",
-    "fork-ts-checker-webpack-plugin": "^1.3.4",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "jest": "^24.8.0",
-    "prettier": "^1.17.1",
-    "rimraf": "^2.6.3",
-    "terser-webpack-plugin": "^1.3.0",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.3",
-    "typescript": "^3.5.2",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-merge": "^4.2.1",
     "whatwg-fetch": "^3.0.0",
     "yab-fetch": "^0.0.1-alpha.3"
   },
