--- a/packages/yab-fetch-cache/tsconfig.json
+++ b/packages/yab-fetch-cache/tsconfig.json
@@ -1,14 +1,4 @@
 {
-  "compilerOptions": {
-    "module": "es6",
-    "target": "es5",
-    "rootDir": "src",
-    "strict": true,
-    "lib": ["es2018", "esnext", "dom"],
-    "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
-  },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"]
+  "extends": "../../tsconfig.json",
+  "include": ["src"]
 }
