--- a/packages/yab-fetch/package.json
+++ b/packages/yab-fetch/package.json
@@ -8,7 +8,7 @@
     "build": "npm run clean && npm run build:es && npm run build:lib && npm run build:dist",
     "build:es": "tsc -p ./tsconfig.es.json",
     "build:lib": "tsc -p ./tsconfig.lib.json",
-    "build:dist": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.config.dist.js",
+    "build:dist": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "lint": "eslint --ext .ts src/ test/",
     "test": "npm run clean:test && jest",
     "start": "jest --watch"
@@ -29,38 +29,9 @@
     "access": "public"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.15",
     "@types/koa-compose": "^3.2.4",
     "@types/lodash.omit": "^4.5.6",
-    "@types/node": "^12.6.6",
     "@types/qs": "^6.5.3",
-    "@typescript-eslint/eslint-plugin": "^1.12.0",
-    "@typescript-eslint/parser": "^1.12.0",
-    "cache-loader": "^4.0.1",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "cross-env": "^5.2.0",
-    "eslint": "5.3.0",
-    "eslint-config-airbnb-base": "13.2.0",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.2",
-    "fork-ts-checker-notifier-webpack-plugin": "^1.0.2",
-    "fork-ts-checker-webpack-plugin": "^1.4.3",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "husky": "^3.0.1",
-    "jest": "^24.8.0",
-    "lint-staged": "^9.2.0",
-    "prettier": "^1.18.2",
-    "rimraf": "^2.6.3",
-    "terser-webpack-plugin": "^1.3.0",
-    "ts-jest": "^24.0.2",
-    "ts-loader": "^6.0.4",
-    "typescript": "^3.5.3",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.6",
-    "webpack-merge": "^4.2.1",
     "whatwg-fetch": "^3.0.0"
   },
   "files": [
@@ -70,17 +41,5 @@
     "koa-compose": "^4.1.0",
     "lodash.omit": "^4.5.0",
     "qs": "^6.7.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/*.{js, ts}": [
-      "prettier --write",
-      "eslint --fix",
-      "git add"
-    ]
   }
 }
