--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "parcel-bundler": "^1.12.3",
     "prettier": "^1.17.1",
     "rimraf": "^3.0.0",
+    "serve": "^11.1.0",
     "terser-webpack-plugin": "^1.3.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
