--- a/packages/yab-fetch-logger/package.json
+++ b/packages/yab-fetch-logger/package.json
@@ -13,10 +13,10 @@
     "start": "npm run dev",
     "serve": "serve dist/example",
     "clean": "rimraf dist",
-    "build": "npm run clean && npm run build:es && npm run build:lib && npm run build:dist && npm run build:example",
+    "build": "npm run clean && npm run build:es && npm run build:lib && npm run build:umd && npm run build:example",
     "build:es": "tsc -p ./tsconfig.es.json",
     "build:lib": "tsc -p ./tsconfig.lib.json",
-    "build:dist": "cross-env NODE_ENV=production webpack --config webpack.config.js",
+    "build:umd": "cross-env NODE_ENV=production webpack --config webpack.config.js",
     "build:example": "parcel build ./example/index.html -d dist/example --log-level 1",
     "lint": "eslint --ext .ts src/"
   },
