--- a/package.json
+++ b/package.json
@@ -28,29 +28,31 @@
     "@types/node": "^10.14.7",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
+    "cache-loader": "^4.0.1",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "cross-env": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "husky": "^3.0.1",
-    "prettier": "^1.17.1",
-    "lerna": "^3.15.0",
-    "lerna-changelog": "^0.8.2",
-    "jest": "^24.8.0",
-    "ts-jest": "^24.0.2",
-    "lint-staged": "^9.2.0",
-    "rimraf": "^3.0.0",
-    "typescript": "^3.5.3",
-    "cache-loader": "^4.0.1",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "cross-env": "^5.2.0",
     "fork-ts-checker-notifier-webpack-plugin": "^1.0.2",
     "fork-ts-checker-webpack-plugin": "^1.4.3",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "husky": "^3.0.1",
+    "jest": "^24.8.0",
+    "lerna": "^3.15.0",
+    "lerna-changelog": "^0.8.2",
+    "lint-staged": "^9.2.0",
+    "parcel-bundler": "^1.12.3",
+    "prettier": "^1.17.1",
+    "rimraf": "^3.0.0",
+    "serve": "^11.1.0",
     "terser-webpack-plugin": "^1.3.0",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.6",
     "webpack-merge": "^4.2.1"
