chore: update renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,9 @@
   "extends": [
     "config:base",
     ":preserveSemverRanges"
-  ]
+  ],
+  "automerge": true,
+  "major": {
+    "automerge": false
+  }
 }
