--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "release": "npm run test && npm run build && npm run publish"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
     "@types/jest": "^24.0.15",
     "@types/node": "^10.14.7",
     "@typescript-eslint/eslint-plugin": "^2.0.0",
